@@ -12,6 +12,9 @@ Features
   provide roles which do not allow to access the persons in the address
   book.
 
+- Added number of displayed persons in search result handler which displays
+  the names of the selected persons (new in 1.9.0).
+
 Other
 -----
 
